--- a/keyboard/split_keyboard/eeprom-gen/eeprom.html
+++ b/keyboard/split_keyboard/eeprom-gen/eeprom.html
@@ -20,7 +20,7 @@
         NO_GUI                   :<input type="checkbox" id="k4"/> </br>
         SWAP_GRAVE_ESC           :<input type="checkbox" id="k5"/> </br>
         SWAP_BACKSLASH_BACKSPACE :<input type="checkbox" id="k6"/> </br>
-        NKRO                     :<input type="checkbox" id="k6"/> </br>
+        NKRO                     :<input type="checkbox" id="k7"/> </br>
         <br />
       <strong>Debug:</strong>
         ENABLE  :<input type="checkbox" id="d0"/>
@@ -55,7 +55,7 @@
           <input type="radio" name="rf_address_len" value="5"/>5
         </form>
           </br>
-        <button type="button" onclick="updateSettings()">Update</button>
+        <button type="button" onclick="updateSettings()">Update</button> (Refresh the page to regenerate encryption/rf settings)
       <h3>Generated:</h3>
         <p id="rf"></p>
         <!-- (Note: if you only want to update tmk boot magic settings, only copy -->
